--- a/.github/workflows/api-governance.yml
+++ b/.github/workflows/api-governance.yml
@@ -268,6 +268,7 @@ jobs:
           inso run collection "FHIR API for Patient, Observation, Encounter, Condition, and Medication (Smile CDR Compatible) 1.0.1" \
             -w ".insomnia/fhir-api-insomnia.yaml" \
             -e "CI" \
+            -i "fld_455a2d36511e4d16ae4f5ef00cccafc3" \
             --disableCertValidation \
             --bail 2>&1 | tee "$TEST_OUTPUT"
           TEST_EXIT_CODE=$?
