--- a/.insomnia/fhir-api-insomnia.yaml
+++ b/.insomnia/fhir-api-insomnia.yaml
@@ -56,7 +56,7 @@ collection:
 
             // Test 2: Verify response is valid FHIR Patient Bundle
 
-            insomnia.test('Check if Resonse Body is a Resoure Bundle', () => {
+            insomnia.test('Check if Response Body is a Resource Bundle', () => {
                insomnia.expect(jsonBody.resourceType).to.eql("Bundle");
             	 insomnia.expect(jsonBody.entry[0].resource.resourceType).to.eql("Patient");
             });
@@ -143,7 +143,7 @@ collection:
 
             // Test 2: Verify response is valid FHIR Patient Bundle
 
-            insomnia.test('Check if Resonse Body is a Patient Resoure', () => {
+            insomnia.test('Check if Response Body is a Patient Resource', () => {
                insomnia.expect(jsonBody.resourceType).to.eql("Patient");
             });
 
@@ -192,7 +192,7 @@ collection:
 
 
             // Test 2: Verify response is valid FHIR Patient Bundle
-            insomnia.test('Check if Resonse Body is a Patient Resoure', () => {
+            insomnia.test('Check if Response Body is a Patient Resource', () => {
                insomnia.expect(jsonBody.resourceType).to.eql("Patient");
             });
 
