Add Kong Konnect deployment workflow and update related documentation
- Introduced a GitHub Actions workflow for deploying the FHIR API to Kong Konnect.
- Updated .gitignore to exclude Terraform-related files.
- Created KONNECT-SETUP.md and KONNECT-QUICKSTART.md for setup and deployment instructions.
- Enhanced README.md with Kong Konnect deployment details.
- Updated start_demo.sh to generate Terraform variables with ngrok URL.
- Added Terraform configuration files for control plane and service setup.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,12 @@
 .ngrok.log
 .ngrok.pid
 # Note: .ngrok-url.txt should be committed for CI/CD testing
+
+# Terraform files
+terraform/.terraform/
+terraform/.terraform.lock.hcl
+terraform/*.tfstate
+terraform/*.tfstate.backup
+terraform/crash.log
+terraform/crash.*.log
+# Note: terraform.tfvars is auto-generated and should be committed (no secrets in it)
