Add Kong Gateway Data Plane setup and Catalog API configuration
- Introduced a new setup script for Kong Data Plane that downloads cluster certificates and starts the data plane.
- Added Kong Gateway service definition in docker-compose.yml.
- Created new Terraform resources for Catalog API and its implementation.
- Updated service catalog entry to include detailed metadata and linked it to the gateway service.
- Enhanced outputs.tf with new Catalog API outputs.
- Updated provider.tf to use the latest stable version of the Kong Konnect provider.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 .ngrok.pid
 # Note: .ngrok-url.txt should be committed for CI/CD testing
 
+# Kong certificates (contains sensitive cluster certificates)
+.kong/
+
 # Terraform files
 terraform/.terraform/
 terraform/.terraform.lock.hcl
