feat(terraform): Add stages for API integration, productization, and developer portal
- Implement Stage 2: Integration with Kong Gateway
  - Create outputs for service ID, name, route ID, and API endpoint
  - Configure provider and variables for Kong Konnect

- Implement Stage 3: API Specification Development & Testing
  - Add README for API-first development workflow using Insomnia
  - Create demo script for validating OpenAPI specs and running tests

- Implement Stage 4: API Productization & Governance
  - Create catalog service and API entries in Kong Konnect
  - Implement rate limiting governance policies
  - Add outputs for catalog service and API IDs

- Implement Stage 5: Developer Portal Publishing
  - Configure developer portal for external developers
  - Add outputs for portal ID and URL
  - Create demo script for publishing to the developer portal

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,28 @@
+# macOS
 .DS_Store
+.AppleDouble
+.LSOverride
 
 # Ngrok files
-.ngrok.log
-.ngrok.pid
-# Note: .ngrok-url.txt should be committed for CI/CD testing
+.ngrok*
 
 # Kong certificates (contains sensitive cluster certificates)
 .kong/
 
 # Terraform files
-terraform/.terraform/
-terraform/.terraform.lock.hcl
-terraform/*.tfstate
-terraform/*.tfstate.backup
-terraform/crash.log
-terraform/crash.*.log
-# Note: terraform.tfvars is auto-generated and should be committed (no secrets in it)
+**/.terraform/
+**/.terraform.lock.hcl
+**/*.tfstate
+**/*.tfstate.backup
+**/crash.log
+**/crash.*.log
+
+# IDE
 .vscode/settings.json
+.idea/
+*.swp
+*.swo
+*~
+
+# Docker
+docker-compose.override.yml
