feat: Persist backend configuration across init and stop scripts
- Save backend choice (AWS/Azure) to .demo-config file in init-demo.sh
- Automatically read backend type from .demo-config in stop-demo.sh
- Eliminates need to re-select backend when running stop-demo.sh
- Add .demo-config to .gitignore for environment-specific config
- Improves user experience with single backend selection

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@
 # Ngrok files
 .ngrok*
 
+# Demo configuration (contains backend choice)
+.demo-config
+
 # Kong certificates (contains sensitive cluster certificates)
 .kong/
 
