chore: Disable automatic workflow triggers for stages 2-5
- Comment out workflow_run triggers to prevent automatic execution
- Keep workflow_dispatch for manual triggering
- Allows more controlled execution of stage workflows

--- a/.github/workflows/stage3-api-spec-testing.yml
+++ b/.github/workflows/stage3-api-spec-testing.yml
@@ -2,10 +2,10 @@ name: Stage 3 - API Spec Testing
 
 on:
   workflow_dispatch:
-  workflow_run:
-    workflows: ["Stage 2 - Integration"]
-    types:
-      - completed
+  # workflow_run:
+  #   workflows: ["Stage 2 - Integration"]
+  #   types:
+  #     - completed
   pull_request:
     paths:
       - '.insomnia/**'
