--- a/.github/workflows/stage2-integration.yml
+++ b/.github/workflows/stage2-integration.yml
@@ -17,10 +17,10 @@ on:
         required: false
         type: boolean
         default: false
-  workflow_run:
-    workflows: ["Stage 1 - Platform"]
-    types:
-      - completed
+  # workflow_run:
+  #   workflows: ["Stage 1 - Platform"]
+  #   types:
+  #     - completed
 
 env:
   TF_VERSION: '1.14.3'
