--- a/.github/workflows/stage5-developer-portal.yml
+++ b/.github/workflows/stage5-developer-portal.yml
@@ -27,10 +27,10 @@ on:
         required: false
         type: boolean
         default: false
-  workflow_run:
-    workflows: ["Stage 4 - API Product"]
-    types:
-      - completed
+  # workflow_run:
+  #   workflows: ["Stage 4 - API Product"]
+  #   types:
+  #     - completed
 
 env:
   TF_VERSION: '1.14.3'
