fix: Correct YAML syntax errors in stage3 workflow
- Fix duplicate lines in Validate Custom Spectral Rules step
- Close unclosed string in echo statement
- Add missing Summary step name
- Resolve syntax errors causing workflow path display issue

--- a/.github/workflows/stage3-api-spec-testing.yml
+++ b/.github/workflows/stage3-api-spec-testing.yml
@@ -48,15 +48,15 @@ jobs:
       
       - name: Validate Custom Spectral Rules
         run: |
-          if [ -f ".spectral.yaml" ]; then
-            echo ""
-            echo "📋 Validating against custom Spectral rules..."
           echo ""
           if [ -f ".spectral.yaml" ] && [ -f ".insomnia/fhir-api-openapi.yaml" ]; then
             echo "📋 Validating against custom Spectral rules..."
             spectral lint .insomnia/fhir-api-openapi.yaml --ruleset .spectral.yaml || true
           else
-            echo "ℹ️  No custom Spectral rules found (.spectral.yaml) - skipping custom validation
+            echo "ℹ️  No custom Spectral rules found (.spectral.yaml) - skipping custom validation"
+          fi
+      
+      - name: Summary
         run: |
           echo ""
           echo "✅ API Specification validation complete"
